<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDark"
        android:padding="12dp"
        android:text="@string/dialog_time_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorLight" />

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_minutes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_minutes_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/text_seconds"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_seconds_text"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <biz.kasual.materialnumberpicker.MaterialNumberPicker
            android:id="@+id/picker_minutes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:npMaxValue="59"
            app:npMinValue="0"
            app:npTextSize="16sp" />

        <biz.kasual.materialnumberpicker.MaterialNumberPicker
            android:id="@+id/picker_seconds"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:npMaxValue="59"
            app:npMinValue="0"
            app:npTextSize="18sp" />

    </LinearLayout>

</LinearLayout>